--- a/.github/workflows/llvmlite_conda_builder.yml
+++ b/.github/workflows/llvmlite_conda_builder.yml
@@ -88,6 +88,8 @@ jobs:
         with:
           auto-update-conda: true
           auto-activate-base: true
+      - run: |
+          bash buildscripts/github/configure_conda.sh
 
       - name: Install conda-build
         run: conda install conda-build
@@ -146,6 +148,8 @@ jobs:
     steps:
       - name: Setup miniconda
         uses: conda-incubator/setup-miniconda@835234971496cad1653abb28a638a281cf32541f # v3.2.0
+      - run: |
+          bash buildscripts/github/configure_conda.sh
 
       - name: Download llvmlite artifact
         uses: actions/download-artifact@634f93cb2916e3fdff6788551b99b062d0335ce0 # v5.0.0
